Implement leader scope, location persistence, and SLA auto-escalation